<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.fintex</groupId>
    <artifactId>ce</artifactId>
    <version>1.0.0</version>
    <name>Portfolio Calculation Engine</name>
    <packaging>pom</packaging>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.6</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <modules>
        <module>domain</module>
        <module>api</module>
        <module>application</module>
        <module>web-client-adapter</module>
        <module>rest-adapter</module>
        <module>bootstrap</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>

        <!-- Surefire JVM args (JaCoCo removed, keep hook) -->
        <surefire.argLine></surefire.argLine>

        <!-- Internal dependencies -->
        <sm-domain.version>2.0.0-SNAPSHOT</sm-domain.version>

        <!-- External dependencies -->
        <spring-openapi.version>2.1.0</spring-openapi.version>


        <poi-ooxml.version>5.4.1</poi-ooxml.version>


        <commons-io.version>2.16.0</commons-io.version>
        <commons-compress.version>1.26.0</commons-compress.version>
        <commons-lang3.version>3.18.0</commons-lang3.version>
        <guava.version>32.1.3-jre</guava.version>
        <tomcat-embed-core.version>10.1.43</tomcat-embed-core.version>
        <rhino.version>1.8.0</rhino.version>

        <!-- Test dependencies -->
        <mockito.version>5.18.0</mockito.version>
        <allure-junit5.version>2.7.0</allure-junit5.version>
        <testng.version>7.8.0</testng.version>
        <swagger-request-validator.version>2.44.8</swagger-request-validator.version>

        <!-- Plugin versions -->
        <git-commit-id-plugin.version>2.2.4</git-commit-id-plugin.version>
        <maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
        <aspectj.version>1.9.24</aspectj.version>
        <allure-maven.version>2.8</allure-maven.version>
        <jib-maven-plugin.version>3.5.1</jib-maven-plugin.version>

        <forkCount>8</forkCount>

        <!-- SonarQube properties -->
        <sonar.sources>src</sonar.sources>
        <sonar.java.binaries>target</sonar.java.binaries>
        <sonar.language>java</sonar.language>
        <sonar.sourceEncoding>UTF-8</sonar.sourceEncoding>
        <sonar.junit.reportPaths>target/surefire-reports</sonar.junit.reportPaths>
        <sonar.inclusions>src/main/java/**</sonar.inclusions>
    </properties>

    <repositories>
        <repository>
            <id>central</id>
            <url>https://repo.maven.apache.org/maven2</url>
        </repository>
        <repository>
            <id>fintexincorporated</id>
            <url>https://pkgs.dev.azure.com/fintexincorporated/_packaging/fintexincorporated/maven/v1</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <dependencyManagement>
        <dependencies>
            <!-- Internal modules -->
            <dependency>
                <groupId>com.fintex</groupId>
                <artifactId>domain</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fintex</groupId>
                <artifactId>api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fintex</groupId>
                <artifactId>application</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fintex</groupId>
                <artifactId>web-client-adapter</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fintex</groupId>
                <artifactId>rest-adapter</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fintex</groupId>
                <artifactId>bootstrap</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- External dependencies -->
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${spring-openapi.version}</version>
            </dependency>


            <dependency>
                <groupId>org.apache.poi</groupId>
                <artifactId>poi-ooxml</artifactId>
                <version>${poi-ooxml.version}</version>
            </dependency>


            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>${commons-io.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-compress</artifactId>
                <version>${commons-compress.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>

            <!-- Vulnerability fixes -->
            <dependency>
                <groupId>org.apache.tomcat.embed</groupId>
                <artifactId>tomcat-embed-core</artifactId>
                <version>${tomcat-embed-core.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mozilla</groupId>
                <artifactId>rhino</artifactId>
                <version>${rhino.version}</version>
            </dependency>

            <!-- Test dependencies -->
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>${mockito.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-junit-jupiter</artifactId>
                <version>${mockito.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-junit5</artifactId>
                <version>${allure-junit5.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.testng</groupId>
                <artifactId>testng</artifactId>
                <version>${testng.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.squareup.okhttp3</groupId>
                <artifactId>mockwebserver</artifactId>
                <version>4.12.0</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.atlassian.oai</groupId>
                <artifactId>swagger-request-validator-restassured</artifactId>
                <version>${swagger-request-validator.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>
                    <dependencies>
                        <dependency>
                            <groupId>org.aspectj</groupId>
                            <artifactId>aspectjweaver</artifactId>
                            <version>${aspectj.version}</version>
                        </dependency>
                    </dependencies>
                    <configuration>
                        <skipTests>false</skipTests>
                        <forkCount>${forkCount}</forkCount>
                        <reuseForks>true</reuseForks>
                        <properties>
                            <property>
                                <name>listener</name>
                                <value>io.qameta.allure.junit5.AllureJunit5</value>
                            </property>
                            <includeTags>${tag}</includeTags>
                        </properties>
                        <includes>
                            <include>**/*Test.java</include>
                            <include>**/*Tests.java</include>
                            <include>**/*IT.java</include>
                            <include>**/*IntegrationTest.java</include>
                        </includes>
                        <argLine>
                            ${surefire.argLine}
                            -XX:+EnableDynamicAgentLoading
                            -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                            -javaagent:"${settings.localRepository}/org/mockito/mockito-core/${mockito.version}/mockito-core-${mockito.version}.jar"
                        </argLine>
                        <systemPropertyVariables>
                            <allure.results.directory>${project.basedir}/allure-results</allure.results.directory>
                            <org.aspectj.dump.directory>${project.build.directory}/ajcore</org.aspectj.dump.directory>
                            <junit.jupiter.extensions.autodetection.enabled>true</junit.jupiter.extensions.autodetection.enabled>
                        </systemPropertyVariables>
                        <reportFormat>plain</reportFormat>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>io.qameta.allure</groupId>
                    <artifactId>allure-maven</artifactId>
                    <version>${allure-maven.version}</version>
                </plugin>

                <plugin>
                    <groupId>pl.project13.maven</groupId>
                    <artifactId>git-commit-id-plugin</artifactId>
                    <version>${git-commit-id-plugin.version}</version>
                </plugin>

                <plugin>
                    <groupId>com.google.cloud.tools</groupId>
                    <artifactId>jib-maven-plugin</artifactId>
                    <version>${jib-maven-plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-maven</artifactId>
            </plugin>
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>2.43.0</version>

                <executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>

                <configuration>
                    <java>
                        <excludes>
                            <exclude>src/**</exclude>
                        </excludes>

                        <eclipse>
                            <file>${session.topLevelProject.basedir}/eclipse-java-formatter.xml</file>
                        </eclipse>

                        <removeUnusedImports/>
                    </java>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>